# package-script-runner

./: .gitignore  Cargo.toml  Justfile.sh  README.md
docs/: developer-notes.md  manual-tests.md  tui.md
scripts/: create-test-projects.sh
src/: cli.rs  commands.rs  config.rs  execution.rs  lib.rs  main.rs  package_managers.rs  project.rs  script_type.rs  themes.rs  tui.rs
src/cli/: cli.rs  commands.rs  mod.rs
src/package_managers/: go.rs  mod.rs  node.rs  python.rs  rust.rs
src/tests/: project_dir_mocks.rs
src/tui/: actions.rs  app.rs  mod.rs  run.rs  script_execution.rs  tui.rs  ui.rs  utils.rs  widgets.rs
src/types/: mod.rs  project.rs  scripts.rs
testdata/npm_proj/: package.json
tests/: helpers.rs  integration-tests.rs
