[package]
name = "package-script-runner"
version = "0.1.0"
edition = "2021"
description = "A fast TUI-based script runner for Node.js and Deno projects"
authors = ["Oliver Steele <oliver.steele@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/osteele/package-script-runner"
repository = "https://github.com/osteele/package-script-runner"
keywords = ["cli", "tui", "nodejs", "npm", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "psr"
path = "src/main.rs"

[dependencies]
ratatui = "0.24.0"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.4"
which = "5.0"
