[package]
name = "package-script-runner"
version = "0.1.0"
edition = "2021"
description = "A fast TUI-based script selector for Node.js, Python, Rust, and Go projects"
authors = ["Oliver Steele <oliver.steele@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/osteele/package-script-runner"
repository = "https://github.com/osteele/package-script-runner"
keywords = ["cli", "tui", "nodejs", "python", "go", "rust", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "psr"
path = "src/main.rs"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-test"] }

[dependencies]
ratatui = "0.24.0"
clap = { version = "4.0", features = ["derive", "env"] }
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.4"
which = "5.0"
toml = "0.7.3"
config = "0.13"
scopeguard = "1.2.0"
